--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "sweetalert": "^2.1.2"
   }
 }
